# rAIght.move-backend

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: code_lint.yaml  gcp_deployment.yaml
app/: main.py
app/api/api_v1/: __init__.py
app/api/api_v1/endpoints/: explain.py
app/core/: exercise_explaination_pipeline.py  processing_pipeline.py
app/models/: angle.py  joint.py  mistake.py  requests.py  result.py  segment.py
app/processors/: angles_processor.py  base.py  joints_processor.py  mistakes_processor.py  results_processor.py  segments_processor.py
app/utils/: config.py  constants.py
configs/: exercises_tables.yaml  pose_estimators.yaml  segmentation.yaml
data/reference/squat/: segment.csv
data/test_cases/: squat_test_joints.json
