[build-system]
requires = [
  "wheel",
  "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "rAIght.move-backend"
version = "0.1"
description = "FastAPI backend with endpoints for explaining mistakes during exercise performance"
requires-python = ">=3.11"
keywords = ["FastAPI", "AI", "pose estimation", "mediapipe"]
readme = "README.md"

dependencies = [
  "uvicorn>=0.30.1",
  "sqlalchemy>=2.0.30",
  "fastapi>=0.111.0",
  "opencv-python>=4.8.1.78",
  "python-jose>=3.3.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "pydantic>=2.7.2",
  "pytest>=8.2.1",
  "tslearn>=0.6.3"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Video :: Capture",
  "Topic :: Multimedia :: Video :: Display",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
  "isort>=5.13.2",
  "black>=24.4.2",
  "pylint>=3.2.2"
]

[tool.setuptools]
package-dir = {"" = "app"}
